Use Chrome User Agent for download requests.

Some web sites return HTML page instead of PassKit object if request's
User Agent is not a known iOS browser.

Bug: 806759
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I566fe85eadb889dd715ddf858b07b6cef4a736c5
Reviewed-on: https://chromium-review.googlesource.com/891760
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532893}
Former-commit-id: 3955573a047a6b2ec777adab157787876cad3616