ios/web/download/download_controller_impl.mm
@@ -7,7 +7,9 @@
 #include "base/strings/sys_string_conversions.h"
 #include "ios/web/public/browser_state.h"
 #import "ios/web/public/download/download_controller_delegate.h"
+#import "ios/web/public/web_client.h"
 #import "net/base/mac/url_conversions.h"
+#include "net/http/http_request_headers.h"
 
 #if !defined(__has_feature) || !__has_feature(objc_arc)
 #error "This file requires ARC support."
@@ -86,6 +88,13 @@ NSURLSession* DownloadControllerImpl::CreateSession(
     NSOperationQueue* delegate_queue) {
   NSURLSessionConfiguration* configuration = [NSURLSessionConfiguration
       backgroundSessionConfigurationWithIdentifier:identifier];
+
+  std::string user_agent = GetWebClient()->GetUserAgent(UserAgentType::MOBILE);
+  configuration.HTTPAdditionalHeaders = @{
+    base::SysUTF8ToNSString(net::HttpRequestHeaders::kUserAgent) :
+        base::SysUTF8ToNSString(user_agent),
+  };
+
   return [NSURLSession sessionWithConfiguration:configuration
                                        delegate:delegate
                                   delegateQueue:delegate_queue];
