ios/web/public/test/fakes/test_web_client.h
@@ -27,6 +27,7 @@ class TestWebClient : public web::WebClient {
   void AddAdditionalSchemes(Schemes* schemes) const override;
   // Returns true for kTestWebUIScheme and kTestNativeContentScheme URL schemes.
   bool IsAppSpecificURL(const GURL& url) const override;
+  std::string GetUserAgent(UserAgentType type) const override;
   base::RefCountedMemory* GetDataResourceBytes(int id) const override;
   NSString* GetDocumentStartScriptForMainFrame(
       BrowserState* browser_state) const override;
